# c-plus-plus-lessons

./: README.md  main.cpp  main.h  main.s  test.ii
1_lesson/Task_01/: Makefile  main.ii  test.cpp  test.h  test.s
1_lesson/Task_02/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
2_lesson/Task_02/Dynamic/: CMakeLists.txt  Makefile
2_lesson/Task_02/Dynamic/lib_src/: test.cpp
2_lesson/Task_02/Static/: CMakeLists.txt  Makefile
2_lesson/Task_02/Static/lib_src/: test.cpp
2_lesson/Task_02/Static/src/: main.cpp
2_lesson/Task_03/: CMakeCache.txt  CMakeLists.txt  Makefile
2_lesson/Task_03/src/: main.cpp  main.h
3_lesson/Task_01/: CMakeLists.txt  Makefile
3_lesson/Task_01/src/: main.cpp  main.h
5_lesson/Task_03/: CMakeLists.txt
5_lesson/Task_03/src/: main.cpp
6_lesson/Task_01/: CMakeLists.txt
6_lesson/Task_01/src/: main.cpp
